# kkowa

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.override.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
_generated/grpc/: helloworld_pb2.py
cli/: app.py  common.py  root.py  wrapper.py
config/: __init__.py
idl/grpc/: helloworld.proto
scripts/: build_app.py
src/: app.py  do_something.py  ipc.py  utils.py
src/api_server/: grpc_server.py
src/core/: __init__.py  crud.py  database.py  main.py  migrate.py
src/core/ipc/: __init__.py  server.py
src/core/ipc/services/: greeter.py
src/core/models/: __init__.py  document.py
src/core/schemas/: __init__.py  document.py
src/gui/: main.py
src/ipc/: __init__.py  client.py
src/proxy/: grpc_client.py  main.py
tests/: conftest.py  test_app.py  test_do_something.py  test_utils.py
tests/core/ipc/services/: test_greeter.py
tests/gui/: test_main.py
